<resources>
    <string name="app_name">AVFlow</string>

    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="template_default_mode_title">分段模式</string>
    <string name="template_default_mode_desc">10秒, 4段</string>
    <string name="choose_ratio">选择画幅</string>
    <string name="ratio_9_16">竖屏</string>
    <string name="ratio_16_9">宽屏</string>
    <string name="ratio_239_1">超宽屏</string>
    <string name="ratio_1_1">方形</string>
    <string name="ratio_3_4">淘宝主图</string>
    <string name="ratio_circle">圆形</string>
    <string name="choose_filter">选择滤镜</string>
    <string name="scene_speed">镜头速度</string>
    <string name="scene_speed_normal">正常</string>
    <string name="scene_speed_fast">快动作</string>
    <string name="scene_speed_slow">慢动作</string>
    <string name="beauty_effect">美肤</string>
    <string name="beauty_effect_none">无</string>
    <string name="beauty_effect_medium">中</string>
    <string name="beauty_effect_strong">强</string>
    <string name="go_to_work_list">作品列表</string>
    <string name="go_to_video_edit">编辑</string>
    <string name="go_to_video_take">编辑</string>
    <string name="go_to_video_save">生成</string>
    <string name="video_edit_title">视频编辑</string>

    <string name="video_edit_panel_play_all">播放全部</string>

    <string name="video_edit_shot_panel_title">分段</string>
    <string name="video_edit_shot_panel_mute">静音</string>
    <string name="video_edit_shot_panel_adjust">画面调节</string>
    <string name="video_edit_shot_panel_filters">滤镜</string>
    <string name="video_edit_shot_panel_beauty">美肤</string>
    <string name="video_edit_shot_panel_speed">速度</string>
    <string name="video_edit_shot_select_one_info">请选择一个片段来编辑</string>

    <string name="video_edit_text_panel_title">文字</string>
    <string name="video_edit_text_panel_add_title">标题</string>
    <string name="video_edit_text_panel_set_title">添加标题</string>
    <string name="video_edit_text_panel_delete_title">删除标题</string>
    <string name="video_edit_text_panel_title_change_size">修改大小</string>
    <string name="video_edit_text_panel_title_change_red">红色</string>
    <string name="video_edit_text_panel_title_change_green">绿色</string>
    <string name="video_edit_text_panel_title_change_blue">蓝色</string>
    <string name="video_edit_text_panel_title_change_posx">X</string>
    <string name="video_edit_text_panel_title_change_posy">Y</string>
    <string name="video_edit_text_panel_title_change_background">设置背景</string>
    <string name="video_edit_text_panel_title_change_font">选择字体</string>
    <string name="video_edit_text_panel_add_title_dialog_content">请输入文字</string>
    <string name="video_edit_text_panel_add_caption">字幕</string>
    <string name="video_edit_text_panel_add_location">时间地点</string>
    <string name="video_edit_text_panel_add_label">标签</string>

    <string name="video_edit_sticker_panel_title">贴纸</string>
    <string name="video_edit_sticker_panel_delete_sticker">删除贴纸</string>

    <string name="video_edit_music_panel_title">音乐</string>

    <string name="video_composing">视频正在合成，请不要退出哦～</string>
    <string name="video_composed">合成完毕，保存在相册，请点击完成退出</string>
    <string name="video_compose_done">完成</string>
</resources>
