<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoEditActivity">

    <RelativeLayout
        android:id="@+id/vw_title"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <LinearLayout
            android:id="@+id/vw_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_pre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/go_to_video_take"
                android:textColor="@color/font_white" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/video_edit_title"
            android:textColor="@color/font_white" />

        <LinearLayout
            android:id="@+id/vw_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_red"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingEnd="7dp"
            android:paddingStart="7dp"
            android:paddingTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/go_to_video_save"
                android:textColor="@color/font_white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_next" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlt_previewer"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/vw_title"
        android:background="@color/theme_black">

        <TextureView
            android:id="@+id/vw_previewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/vw_filter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tv_filter_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_white"
                android:textSize="16sp"
                tools:text="F1" />

            <TextView
                android:id="@+id/tv_filter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/font_white"
                android:textSize="16sp"
                tools:text="夏日的阳光" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/rlt_previewer">

        <RelativeLayout
            android:id="@+id/vw_scene_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/tv_play_all"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/video_edit_panel_play_all"
                android:textColor="@color/font_white"
                android:textSize="12sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_scene_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/tv_play_all"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/vw_panel_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/vw_panel_shot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_edit_panel_shots" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_edit_shot_panel_title" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vw_panel_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/theme_black"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_edit_panel_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_edit_text_panel_title" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vw_panel_sticker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/theme_black"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_edit_panel_sticker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_edit_sticker_panel_title" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vw_panel_music"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/theme_black"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_edit_panel_music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_edit_music_panel_title" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/vw_panel_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/vw_panel_title"
            android:layout_below="@id/vw_scene_list" />

    </RelativeLayout>

</RelativeLayout>